// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test K8sRollingRollback Step Validate timeout is min 10s with runtime 1`] = `
Object {
  "timeout": "Value must be greater than or equal to \\"10s\\"",
}
`;

exports[`Test K8sRollingRollback Step inputSet 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="formGroup sm"
    >
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="/abc.timeout"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="stepTestUtilForm_/abc.timeout"
          >
            pipelineSteps.timeoutLabel
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiTypeInput--main"
            style="flex-grow: 1;"
          >
            <div
              class="bp3-input-group bp3-fill"
            >
              <input
                class="bp3-input"
                name="/abc.timeout"
                placeholder="Enter w/d/h/m/s/ms"
                type="text"
                value=""
              />
            </div>
            <span
              class="bp3-popover-wrapper MultiTypeInput--wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formGroup sm"
    >
      <div
        class="bp3-form-group multiTypeCheckbox checkbox"
      >
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiTypeInput--main"
          >
            <label
              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox input StyledProps--main"
            >
              <input
                name="/abc.spec.skipDryRun"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              pipelineSteps.skipDryRun
            </label>
            <span
              class="bp3-popover-wrapper MultiTypeInput--wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </div>
          <span
            class="Tooltip--acenter tooltip"
            data-tooltip-id="stepTestUtilForm_/abc.spec.skipDryRun"
          />
        </div>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Test K8sRollingRollback Step on edit view update 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall"
    >
      <div
        class="formGroup lg"
      >
        <div
          class="InputWithIdentifier--txtNameContainer TextInput--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="k8RollingRB_identifier"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                Id
              </p>
            </div>
            <p
              class="StyledProps--font StyledProps--main"
            >
              :
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="bp3-editable-text InputWithIdentifier--idValue"
                  tabindex="0"
                >
                  <span
                    class="bp3-editable-text-content"
                    style="height: 1px; line-height: 1px; min-width: 0;"
                  >
                    Test A
                  </span>
                </div>
              </span>
            </span>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="Edit"
              style="vertical-align: middle; cursor: pointer;"
            >
              <svg
                height="12"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  opacity="0.3"
                />
              </svg>
            </span>
          </div>
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="name"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="k8RollingRB_name"
              >
                name
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  placeholder="pipeline.stepNamePlaceholder"
                  type="text"
                  value="Test A"
                />
              </div>
            </div>
          </div>
          <div
            class="FormError--errorDiv InputWithIdentifier--idError"
            data-name="identifier"
          >
            <span
              class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
              data-icon="circle-cross"
            >
              <svg
                height="12"
                viewBox="0 0 13 13"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M0.166687 6.5013C0.166687 9.99911 3.00222 12.8346 6.50002 12.8346C9.99782 12.8346 12.8334 9.99911 12.8334 6.5013C12.8334 3.0035 9.99782 0.167969 6.50002 0.167969C3.00222 0.167969 0.166687 3.0035 0.166687 6.5013ZM4.23841 3.498L6.49799 5.76096L8.76198 3.49767C9.25705 3.00275 9.99831 3.74646 9.50325 4.24137L7.23992 6.504L9.49411 8.76157C9.98873 9.25693 9.2468 9.99996 8.75218 9.5046L6.49732 7.24638L4.23807 9.50494C3.74301 9.99985 3.00174 9.25615 3.49681 8.76123L5.75539 6.50334L3.49648 4.24104C3.00186 3.74568 3.74379 3.00264 4.23841 3.498Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="FormError--error"
            >
              validation.validIdRegex
            </span>
          </div>
        </div>
      </div>
      <div
        class="formGroup sm"
      >
        <div
          class="bp3-form-group bp3-intent-danger"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8RollingRB_timeout"
            >
              pipelineSteps.timeoutLabel
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              style="flex-grow: 1;"
            >
              <div
                class="bp3-input-group bp3-fill"
              >
                <input
                  class="bp3-input"
                  name="timeout"
                  placeholder="Enter w/d/h/m/s/ms"
                  type="text"
                  value="5s"
                />
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
            <div
              class="bp3-form-helper-text"
            >
              <div
                class="FormError--errorDiv"
                data-name="timeout"
              >
                <span
                  class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                  data-icon="circle-cross"
                >
                  <svg
                    height="12"
                    viewBox="0 0 13 13"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M0.166687 6.5013C0.166687 9.99911 3.00222 12.8346 6.50002 12.8346C9.99782 12.8346 12.8334 9.99911 12.8334 6.5013C12.8334 3.0035 9.99782 0.167969 6.50002 0.167969C3.00222 0.167969 0.166687 3.0035 0.166687 6.5013ZM4.23841 3.498L6.49799 5.76096L8.76198 3.49767C9.25705 3.00275 9.99831 3.74646 9.50325 4.24137L7.23992 6.504L9.49411 8.76157C9.98873 9.25693 9.2468 9.99996 8.75218 9.5046L6.49732 7.24638L4.23807 9.50494C3.74301 9.99985 3.00174 9.25615 3.49681 8.76123L5.75539 6.50334L3.49648 4.24104C3.00186 3.74568 3.74379 3.00264 4.23841 3.498Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="FormError--error"
                >
                  Value must be greater than or equal to "10s"
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test K8sRollingRollback Step should render edit view 1`] = `
<div>
  <div
    style="display: grid; grid-template-columns: 480px 1fr; column-gap: 20px;"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall"
        >
          <div
            class="formGroup lg"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="k8RollingRB_identifier"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Id
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text InputWithIdentifier--idValue"
                      tabindex="0"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      >
                        Test_A
                      </span>
                    </div>
                  </span>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                  style="vertical-align: middle; cursor: pointer;"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp3-form-group"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="k8RollingRB_name"
                  >
                    name
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      placeholder="pipeline.stepNamePlaceholder"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="formGroup sm"
          >
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for="timeout"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="k8RollingRB_timeout"
                >
                  pipelineSteps.timeoutLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  style="flex-grow: 1;"
                >
                  <div
                    class="bp3-input-group bp3-fill"
                  >
                    <input
                      class="bp3-input"
                      name="timeout"
                      placeholder="Enter w/d/h/m/s/ms"
                      type="text"
                      value="10m"
                    />
                  </div>
                  <span
                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <pre>
        {}

      </pre>
    </div>
  </div>
</div>
`;

exports[`Test K8sRollingRollback Step should render inputSet view 1`] = `
<div>
  <div
    style="display: grid; grid-template-columns: 480px 1fr; column-gap: 20px;"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="formGroup sm"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="timeout"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="stepTestUtilForm_timeout"
              >
                pipelineSteps.timeoutLabel
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                style="flex-grow: 1;"
              >
                <div
                  class="bp3-input-group bp3-fill"
                >
                  <input
                    class="bp3-input"
                    name="timeout"
                    placeholder="Enter w/d/h/m/s/ms"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="formGroup sm"
        >
          <div
            class="bp3-form-group multiTypeCheckbox checkbox"
          >
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox input StyledProps--main"
                >
                  <input
                    name="spec.skipDryRun"
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  pipelineSteps.skipDryRun
                </label>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
              <span
                class="Tooltip--acenter tooltip"
                data-tooltip-id="stepTestUtilForm_spec.skipDryRun"
              />
            </div>
          </div>
        </div>
        <p
          class="StyledProps--font StyledProps--main"
        >
          Errors
        </p>
        <pre>
          {}
        </pre>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <pre>
        {}

      </pre>
    </div>
  </div>
</div>
`;

exports[`Test K8sRollingRollback Step should render inputSet view and test validation 1`] = `
<div>
  <div
    style="display: grid; grid-template-columns: 480px 1fr; column-gap: 20px;"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          Errors
        </p>
        <pre>
          {}
        </pre>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <pre>
        identifier: Test_A
type: K8sRollingRollback

      </pre>
    </div>
  </div>
</div>
`;

exports[`Test K8sRollingRollback Step should render variable view 1`] = `
<div>
  <div
    style="display: grid; grid-template-columns: 480px 1fr; column-gap: 20px;"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <div
        class="variablesListTable"
      >
        <div
          class="variableListRow variable-list-row"
        >
          <span
            class="nameSection"
          >
            timeout
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main valueSection StyledProps--font-variation-body StyledProps--font-weight-semi-bold StyledProps--padding-left-medium StyledProps--color StyledProps--color-black100"
            style="--text-line-clamp: 1;"
          >
            <span
              class=""
            >
              10m
            </span>
          </p>
        </div>
        <div
          class="variableListRow variable-list-row"
        >
          <span
            class="nameSection"
          >
            skipDryRun
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main valueSection StyledProps--font-variation-body StyledProps--font-weight-semi-bold StyledProps--padding-left-medium StyledProps--color StyledProps--color-black100"
            style="--text-line-clamp: 1;"
          >
            <span
              class=""
            >
              false
            </span>
          </p>
        </div>
      </div>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <pre>
        {}

      </pre>
    </div>
  </div>
</div>
`;
